--- a/download_pdf.html
+++ b/download_pdf.html
@@ -47,61 +47,24 @@
         async function downloadPDF() {
             const { jsPDF } = window.jspdf;
             const pdf = new jsPDF();
+            const margin = 10;
+            const lineHeight = 10;
+            const pageHeight = pdf.internal.pageSize.height;
+
+            // Add logo to the first page
+            const logo = new Image();
+            logo.src = 'https://seeklogo.com/images/U/uefa-euro-2024-logo-124EEA67D8-seeklogo.com.png';
+            pdf.addImage(logo, 'PNG', margin, margin, 50, 50);
+
+            // Fetch participants data
             const response = await fetch('participants.json');
             const participants = await response.json();
 
-            const flags = {
-                'Germany': 'https://flagcdn.com/w20/de.png',
-                'Scotland': 'https://flagcdn.com/w20/gb-sct.png',
-                'Hungary': 'https://flagcdn.com/w20/hu.png',
-                'Switzerland': 'https://flagcdn.com/w20/ch.png',
-                'Spain': 'https://flagcdn.com/w20/es.png',
-                'Croatia': 'https://flagcdn.com/w20/hr.png',
-                'Italy': 'https://flagcdn.com/w20/it.png',
-                'Albania': 'https://flagcdn.com/w20/al.png',
-                'Serbia': 'https://flagcdn.com/w20/rs.png',
-                'England': 'https://flagcdn.com/w20/gb-eng.png',
-                'Slovenia': 'https://flagcdn.com/w20/si.png',
-                'Denmark': 'https://flagcdn.com/w20/dk.png',
-                'Poland': 'https://flagcdn.com/w20/pl.png',
-                'Netherlands': 'https://flagcdn.com/w20/nl.png',
-                'Austria': 'https://flagcdn.com/w20/at.png',
-                'France': 'https://flagcdn.com/w20/fr.png',
-                'Romania': 'https://flagcdn.com/w20/ro.png',
-                'Ukraine': 'https://flagcdn.com/w20/ua.png',
-                'Belgium': 'https://flagcdn.com/w20/be.png',
-                'Slovakia': 'https://flagcdn.com/w20/sk.png',
-                'Turkey': 'https://flagcdn.com/w20/tr.png',
-                'Georgia': 'https://flagcdn.com/w20/ge.png',
-                'Portugal': 'https://flagcdn.com/w20/pt.png',
-                'Czechia': 'https://flagcdn.com/w20/cz.png'
-            };
+            // Table of contents
+            let toc = [];
+            let currentPage = 1;
 
-            // Add the logo to the first page
-            const logo = new Image();
-            logo.src = 'https://seeklogo.com/images/U/uefa-euro-2024-logo-124EEA67D8-seeklogo.com.png';
-            pdf.addImage(logo, 'PNG', 80, 10, 50, 50);
-
-            // Add title to the first page
-            pdf.setFontSize(22);
-            pdf.text('Participant Predictions vs. Euro2024 Results', 10, 70);
-
-            let y = 80;
-            const lineHeight = 10;
-            const pageHeight = pdf.internal.pageSize.height;
-            const margin = 10;
-
-            // Add table of contents on the second page
-            pdf.addPage();
-            pdf.setFontSize(16);
-            pdf.text('Table of Contents', 10, 10);
-            pdf.setFontSize(12);
-            let tocY = 20;
-
-            // Track page numbers for the table of contents
-            const tocEntries = [];
-            let pageNumber = 1;
-
+            // Generate content for each participant
             for (let i = 0; i < participants.participants.length; i++) {
                 const participant = participants.participants[i];
                 const csvResponse = await fetch(participant.file);
@@ -109,61 +72,47 @@
 
                 if (i > 0) {
                     pdf.addPage();
-                    pageNumber++;
+                    currentPage++;
                 }
 
-                // Add participant name to the table of contents
-                tocEntries.push({ name: participant.name, page: pageNumber });
+                toc.push({ name: participant.name, page: currentPage });
+
                 pdf.setFontSize(16);
-                pdf.text(participant.name, 10, 10);
-                pdf.setFontSize(10);
+                pdf.text(participant.name, margin, 70);
+                pdf.setFontSize(12);
 
                 const rows = csvData.split('\n').map(row => row.split(','));
-                y = 20;
+                let y = 80;
 
-                const colWidths = [40, 40, 40, 40]; // Adjust column widths as needed
+                rows.forEach(row => {
+                    let line = row.join(', ');
+                    let splitText = pdf.splitTextToSize(line, pdf.internal.pageSize.width - margin * 2);
 
-                for (const row of rows) {
-                    let x = margin;
-                    for (let j = 0; j < row.length; j++) {
-                        const cellContent = row[j].trim();
-                        if (flags[cellContent]) {
-                            const img = new Image();
-                            img.src = flags[cellContent];
-                            pdf.addImage(img, 'PNG', x, y - 4, 6, 4); // Adjust image position and size
-                            x += 8; // Adjust x position for the flag
+                    splitText.forEach(textLine => {
+                        if (y + lineHeight > pageHeight - margin) {
+                            pdf.addPage();
+                            currentPage++;
+                            y = margin;
                         }
-                        let cellText = cellContent.replace(/,+$/, ''); // Remove trailing commas
-                        const splitText = pdf.splitTextToSize(cellText, colWidths[j] - 2);
-
-                        for (const textLine of splitText) {
-                            if (y + lineHeight > pageHeight - margin) {
-                                pdf.addPage();
-                                pageNumber++;
-                                y = margin;
-                            }
-                            pdf.text(textLine, x, y);
-                            y += lineHeight;
-                        }
-                        x += colWidths[j];
-                    }
-                    y += lineHeight;
-                }
+                        pdf.text(textLine, margin, y);
+                        y += lineHeight;
+                    });
+                });
             }
+
+            // Add table of contents on the second page
+            pdf.addPage();
+            pdf.text("Table of Contents", margin, margin);
+            toc.forEach((entry, index) => {
+                pdf.text(`${entry.name}: Page ${entry.page}`, margin, margin + (index + 1) * lineHeight);
+            });
 
             // Add page numbers
             const totalPages = pdf.internal.getNumberOfPages();
-            for (let j = 1; j <= totalPages; j++) {
-                pdf.setPage(j);
+            for (let i = 1; i <= totalPages; i++) {
+                pdf.setPage(i);
                 pdf.setFontSize(10);
-                pdf.text(`Page ${j} of ${totalPages}`, pdf.internal.pageSize.width - 30, pdf.internal.pageSize.height - 10);
-            }
-
-            // Go back to the table of contents and add the entries
-            pdf.setPage(2);
-            for (const entry of tocEntries) {
-                pdf.text(`${entry.name} - Page ${entry.page}`, 10, tocY);
-                tocY += lineHeight;
+                pdf.text(`Page ${i} of ${totalPages}`, pdf.internal.pageSize.width - margin * 3, pdf.internal.pageSize.height - margin);
             }
 
             pdf.save('full_predictions.pdf');
