--- a/download_pdf.html
+++ b/download_pdf.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Download CSVs as PDF</title>
+    <title>Download Predictions as PDF</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <style>
         body {
@@ -40,7 +40,7 @@
         <img src="https://seeklogo.com/images/U/uefa-euro-2024-logo-124EEA67D8-seeklogo.com.png" alt="Euro 2024 Logo" style="width:200px;">
     </div>
     <div class="button-container">
-        <button onclick="downloadPDF()">Download CSVs as PDF</button>
+        <button onclick="downloadPDF()">Download Predictions as PDF</button>
     </div>
 
     <script>
