--- a/participant_comparison.html
+++ b/participant_comparison.html
@@ -53,7 +53,7 @@
 </head>
 <body>
     <div class="logo-container">
-        <img src="https://seeklogo.com/images/U/uefa-euro-2024-logo-124EEA67D8-seeklogo.com.png" alt="Euro 2024 Logo" style="width:200px;">
+        <img src="./logo.png" alt="Euro 2024 Logo" style="width:200px;">
     </div>
     <h1>Compare Participants Predictions</h1>
     <div class="comparison-container">
