--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <body>
 
     <div class="logo-container">
-        <img src="https://seeklogo.com/images/U/uefa-euro-2024-logo-124EEA67D8-seeklogo.com.png" alt="Euro 2024 Logo" style="width:200px;">
+        <img src="./logo.png" alt="Euro 2024 Logo" style="width:200px;">
     </div>
     <h1>Euro 2024 Schedule and Predictions</h1>
     <div class="button-container">
