--- a/download_pdf.html
+++ b/download_pdf.html
@@ -46,7 +46,7 @@
     <script>
         async function downloadPDF() {
             const { jsPDF } = window.jspdf;
-            const pdf = new jsPDF();
+            const pdf = new jsPDF('p', 'mm', 'a4');
 
             // Load the logo image
             const logoResponse = await fetch('logo.png');
@@ -75,6 +75,10 @@
                 const response = await fetch('participants.json');
                 const participants = await response.json();
 
+                const margin = 10;
+                const pageContentWidth = pageWidth - 2 * margin;
+                const columnWidth = pageContentWidth / 2 - margin;
+
                 for (let i = 0; i < participants.participants.length; i++) {
                     const participant = participants.participants[i];
                     const csvResponse = await fetch(participant.file);
@@ -85,26 +89,40 @@
                     }
 
                     pdf.setFontSize(12);
-                    pdf.text(participant.name, 10, 10);
-                    pdf.setFontSize(8);
+                    pdf.text(participant.name, margin, margin);
+                    pdf.setFontSize(6);
 
                     const rows = csvData.split('\n').map(row => row.split(','));
-                    let y = 15;
-                    const lineHeight = 8;
-                    const margin = 10;
+                    let x = margin;
+                    let y = margin + 10;
+                    let col = 0;
 
                     rows.forEach(row => {
+                        if (col > 1) {
+                            pdf.addPage();
+                            x = margin;
+                            y = margin + 10;
+                            col = 0;
+                        }
+
                         let line = row.join(', ');
-                        let splitText = pdf.splitTextToSize(line, pageWidth - margin * 2);
+                        let splitText = pdf.splitTextToSize(line, columnWidth);
 
                         splitText.forEach(textLine => {
-                            if (y + lineHeight > pageHeight - margin) {
+                            if (y + 8 > pageHeight - margin) {
                                 pdf.addPage();
-                                y = margin;
+                                x = margin;
+                                y = margin + 10;
+                                col = 0;
                             }
-                            pdf.text(textLine, margin, y);
-                            y += lineHeight;
+                            pdf.text(textLine, x, y);
+                            y += 8;
                         });
+
+                        y += 4;
+                        col++;
+                        x = col === 1 ? margin + columnWidth + margin : margin;
+                        y = col === 1 ? y - (splitText.length + 1) * 8 : y;
                     });
                 }
 
