--- a/download_pdf.html
+++ b/download_pdf.html
@@ -89,25 +89,14 @@
                     pdf.setFontSize(8);
 
                     const rows = csvData.split('\n').map(row => row.split(','));
-
                     let y = 15;
-                    const lineHeight = 8;
-                    const margin = 10;
-
-                    const sectionHeaders = ['Group A', 'Group B', 'Group C', 'Group D', 'Group E', 'Group F', 'R16', 'QF', 'SF', 'F', 'Others'];
-                    const sections = { 'Group A': [], 'Group B': [], 'Group C': [], 'Group D': [], 'Group E': [], 'Group F': [], 'R16': [], 'QF': [], 'SF': [], 'F': [], 'Others': [] };
+                    const lineHeight = 5;
+                    const margin = 5;
 
                     rows.forEach(row => {
-                        const header = row[0].trim();
-                        if (sectionHeaders.includes(header)) {
-                            sections[header].push(row.join(', '));
-                        } else {
-                            sections['Others'].push(row.join(', '));
-                        }
-                    });
+                        let line = row.join(', ');
+                        let splitText = pdf.splitTextToSize(line, pageWidth - margin * 2);
 
-                    const printSection = (section) => {
-                        let splitText = pdf.splitTextToSize(sections[section].join('\n'), pageWidth - margin * 2);
                         splitText.forEach(textLine => {
                             if (y + lineHeight > pageHeight - margin) {
                                 pdf.addPage();
@@ -116,23 +105,6 @@
                             pdf.text(textLine, margin, y);
                             y += lineHeight;
                         });
-                    };
-
-                    // Print Group Stages in two rows
-                    const groupStages = ['Group A', 'Group B', 'Group C', 'Group D', 'Group E', 'Group F'];
-                    let groupRow = groupStages.slice(0, 3).map(group => sections[group].join('\n')).join(' - ');
-                    printSection(groupRow);
-                    y += lineHeight;
-                    groupRow = groupStages.slice(3).map(group => sections[group].join('\n')).join(' - ');
-                    printSection(groupRow);
-                    y += lineHeight;
-
-                    // Print other sections
-                    ['R16', 'QF', 'SF', 'F', 'Others'].forEach(section => {
-                        pdf.text(section, margin, y);
-                        y += lineHeight;
-                        printSection(section);
-                        y += lineHeight;
                     });
                 }
 
