--- a/actual_results_comparison.html
+++ b/actual_results_comparison.html
@@ -53,7 +53,7 @@
 </head>
 <body>
     <div class="logo-container">
-        <img src="./logo.png" alt="Euro 2024 Logo" style="width:200px;">
+        <img src="./logos/logo.png" alt="Euro 2024 Logo" style="width:200px;">
     </div>
     <h1>Participant Results vs. Euro2024 Results</h1>
     <div class="comparison-container">
@@ -155,7 +155,7 @@
         window.onload = function() {
             loadCSV('./Actual_Results.csv', rows => displayTable('actualResults', rows));
 
-            fetch('participants.json')
+            fetch('./jsons/participants.json')
                 .then(response => response.json())
                 .then(data => populateDropdowns(data.participants))
                 .catch(error => console.error('Error loading participants list:', error));
