--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <body>
 
     <div class="logo-container">
-        <img src="./logo.png" alt="Euro 2024 Logo" style="width:200px;">
+        <img src="./logos/logo.png" alt="Euro 2024 Logo" style="width:200px;">
     </div>
     <h1>Euro 2024 Schedule and Predictions</h1>
     <div class="button-container">
