--- a/actual_results_comparison.html
+++ b/actual_results_comparison.html
@@ -153,7 +153,7 @@
 
         // Load actual results on page load
         window.onload = function() {
-            loadCSV('./Actual_Results.csv', rows => displayTable('actualResults', rows));
+            loadCSV('./results_csv/Actual_Results.csv', rows => displayTable('actualResults', rows));
 
             fetch('./jsons/participants.json')
                 .then(response => response.json())
